Statistics handler update